--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div>
       <h2>クラブ</h2>
       <div>
-        水泳部
+        合気道部
       </div>
     </div>
 
     <div>
       <h2>趣味</h2>
       <div>
-        YouTube
+        音楽鑑賞と作曲
       </div>
     </div>
   </div>
