--- a/rep01.html
+++ b/rep01.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <h1>1週目のレポート ： 公大高専１年実習 I-1</h1>
+    <div>01班23番 みどりむし</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,9 +31,10 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムを作成した。
+        このプログラムを実行すると、ゼルダの伝説シリーズのトライフォースのような形のサイエンスアートができる。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        三角形の外角の計算と、中にある三角形を描くのが難しかった。<br>
       </div>
     </div>
 
