--- a/rep01.html
+++ b/rep01.html
@@ -43,9 +43,12 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを使ってゲームのプログラムを作成した。
+        このプログラムを実行すると、左右キーで移動できる猫が上から降ってくるリンゴをとると10点分の点数が与えられ、
+        それを繰り返す。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        りんごの他にもバナナやミカンなどを使って、
+        どれを取るかによってそれぞれ点数が変わるプログラムを作ってみても面白そうだ。<br>        
       </div>
     </div>
 
@@ -53,17 +56,19 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web2023/">私のホームページ</a><br>
+        <a href="https://midorimushi364.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        内容は中身が何もないただの自己紹介文だが、ここに来るまでに結構苦労したし、
+        どこをどうすれば良いのかそれなりに迷った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        最近あまり見ていないが、wikipediaなどはこうやって作られているのかと思うと、
+        内容の薄い記事でも結構手順踏んだりしているのだなと感じた。<br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2023年10月25日
   </div>
 </body>
 </html>
