--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>1B班23番 みどりむし</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -31,9 +31,9 @@
       <a href="https://yourID.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        上記の内容の通り、1週目のレポートをHTMLで作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        個人的に難しかった。特に、コードなどの問題が厄介だと感じた。<br>
       </div>
     </div>
 
@@ -42,9 +42,12 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        AIと機械学習、そして深層学習について学んだ。
+        AIは人工知能の略称であり、知能の定義がとてもあいまいで、研究する内容や大学によっても定義が違ったりすると聞いた。
+        定義が場所によって異なるのはなんだか新鮮な気がして興味をひかれた。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        Iと機械学習は聞いたことはあったけど、深層学習は本当に聞いたことがなかったから改めてAIに興味がわいた。
+        まだまだ自分の知らないことがたくさんある。<br>        
       </div>
     </div>
     
@@ -53,15 +56,15 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        会議室に入り、Meta Questの空間に入った。VRの装着器具にはマイクがついており、人と人が離れていても快適に話すことができた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        とても新鮮な感覚で楽しかった。以前にも大学の体験学習でVRをつけたことが2・3回あるが、これとはまた違った感覚で興味を持った。<br>
       </div>
     </div>
     
   </div>
   <div class=footer>
-    作成日：20YY年XX月XX日
+    作成日：2023年11月03日
   </div>
 </body>
 </html>
