--- a/rep02.html
+++ b/rep02.html
@@ -39,7 +39,9 @@
 
     <div>
       <h3>2-2 機械学習体験</h3>
-      <img src="ml.png" alt="ML" width="50%" height="50%">
+      <img src="gu-.png" alt="ML" width="50%" height="50%">
+      <img src="choki.png" alt="ML" width="50%" height="50%">
+      <img src="pa-.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
         AIと機械学習、そして深層学習について学んだ。
