--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="file:///C:/Users/midorimushi/Downloads/WebDOJO.1700008685897.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        元々あったScriptを自分の手で形を変えたり置き場所を変えたりした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        Scratchではブロックを1つ置くだけで座標を特定できたが、Javascriptは英語だからとても難しく感じた。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,10 @@
       <a href="file:///C:/Users/midorimushi/Downloads/WebDOJO.1700017408993.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Javascriptを利用して伝言プログラムに近いものを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+      　正直に言うと、ものすごく難しかった。使ったことない記号がたくさん出てきたり、
+        一番衝撃だったのは「$」とかいう記号を使うことだった。難しかったけど、やりがいはあった。<br>
       </div>
     </div>
 
