--- a/rep03.html
+++ b/rep03.html
@@ -54,9 +54,9 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+        自分で作れるようなプログラムの中をVRを使って体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        プログラムの中は思っていたよりも広大で、いろんなことができた（球を打つ、物体をつかんで移動させる等）。<br>
       </div>
     </div>
   
@@ -74,7 +74,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2023年11月20日
   </div>
 </body>
 </html>
